--- a/css/index.css
+++ b/css/index.css
@@ -4,13 +4,17 @@
 
 #btn-container button {
   padding: 10px;
-  min-height: 80px;
+  min-height: 60px;
   min-width: 90px;
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin: 5px;
 }
 
-a {
+.margin10 {
+  margin: 10px;
+}
+
+div#github-link {
   margin: 10px;
 }
 
